Adres kan worden toegevoegd

--- a/AngularFE/src/app/adres-list/adres-list.component.html
+++ b/AngularFE/src/app/adres-list/adres-list.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <button mat-fab class="mb-4 float-right" title="Adres toevoegen">
+  <button mat-fab routerLink="/adres" class="mb-4 float-right" title="Adres toevoegen">
     <mat-icon>add</mat-icon>
   </button>
 
